--- a/requirements.txt
+++ b/requirements.txt
@@ -1,310 +1,305 @@
-# MS packages
-#%pip install gensim==3.8
-#%pip install matchms
-#%pip install spec2vec
-#transformers
-absl-py                           0.11.0
-aiohttp                           3.7.4.post0
-alabaster                         0.7.12
-alembic                           1.5.7
-anyio                             3.3.2
-apex                              0.1
-appdirs                           1.4.4
-argon2-cffi                       20.1.0
-ascii-graph                       1.5.1
-astunparse                        1.6.3
-async-generator                   1.10
-async-timeout                     3.0.1
-attrs                             21.2.0
-audioread                         2.1.9
-Babel                             2.9.0
-backcall                          0.2.0
-beautifulsoup4                    4.9.3
-bleach                            3.3.0
-blis                              0.4.1
-bokeh                             2.4.0
-boto3                             1.17.10
-botocore                          1.20.10
-brotlipy                          0.7.0
-cachetools                        4.2.1
-catalogue                         1.0.0
-cattrs                            1.8.0
-certifi                           2020.12.5
-certipy                           0.1.3
-cffi                              1.14.3
-chardet                           3.0.4
-click                             7.1.2
-codecov                           2.1.11
-conda                             4.9.2
-conda-build                       3.21.4
-conda-package-handling            1.7.2
-configparser                      5.0.2
-coverage                          5.4
-cryptography                      3.2.1
-cxxfilt                           0.2.2
-cycler                            0.10.0
-cymem                             2.0.5
-Cython                            0.28.4
-DataProperty                      0.50.0
-decorator                         4.4.2
-deepspeed                         0.3.13
-defusedxml                        0.6.0
-Deprecated                        1.2.12
-DLLogger                          0.1.0
-docker-pycreds                    0.4.0
-docutils                          0.16
-entrypoints                       0.3
-fastai                            2.1.10
-fastcore                          1.3.19
-fastprogress                      1.0.0
-filelock                          3.0.12
-findspark                         1.4.2
-flake8                            3.7.9
-Flask                             1.1.2
-flatbuffers                       1.12
-future                            0.18.2
-gast                              0.3.3
-gensim                            3.8.0
-gitdb                             4.0.5
-GitPython                         3.1.14
-glob2                             0.7
-google-auth                       1.28.0
-google-auth-oauthlib              0.4.3
-google-pasta                      0.2.0
-graphsurgeon                      0.4.5
-greenlet                          1.0.0
-grpcio                            1.32.0
-h5py                              2.10.0
-html2text                         2020.1.16
-hypothesis                        4.50.8
-idna                              2.10
-imageio                           2.9.0
-imagesize                         1.2.0
-importlib-metadata                2.0.0
-inflect                           5.0.2
-iniconfig                         1.1.1
-ipdb                              0.13.4
-ipyexperiments                    0.1.24
-ipykernel                         5.4.3
-ipython                           7.20.0
-ipython-genutils                  0.2.0
-ipywidgets                        7.6.4
-itsdangerous                      1.1.0
-jedi                              0.17.0
-Jinja2                            2.11.3
-jmespath                          0.10.0
-joblib                            1.0.1
-json5                             0.9.5
-jsonschema                        3.0.2
-jupyter-client                    6.1.7
-jupyter-contrib-core              0.3.3
-jupyter-contrib-nbextensions      0.5.1
-jupyter-core                      4.6.3
-jupyter-highlight-selected-word   0.2.0
-jupyter-latex-envs                1.4.6
-jupyter-nbextensions-configurator 0.4.1
-jupyter-server                    1.11.1
-jupyter-server-proxy              3.1.0
-jupyter-telemetry                 0.1.0
-jupyter-tensorboard               0.2.0
-jupyterhub                        1.3.0
-jupyterlab                        3.2.0rc0
-jupyterlab-nvdashboard            0.6.0
-jupyterlab-pygments               0.1.2
-jupyterlab-server                 2.8.2
-jupyterlab-widgets                1.0.0
-jupytext                          1.6.0
-keras                             2.6.0
-Keras-Preprocessing               1.1.2
-kiwisolver                        1.3.1
-libarchive-c                      2.9
-librosa                           0.8.0
-line-profiler                     3.2.6
-llvmlite                          0.34.0
-lmdb                              1.1.1
-lxml                              4.6.3
-Mako                              1.1.4
-Markdown                          3.3.3
-markdown-it-py                    0.5.8
-MarkupSafe                        1.1.1
-maskrcnn-benchmark                0.1
-matchms                           0.9.2
-matplotlib                        3.3.4
-mbstrdecoder                      1.0.1
-mccabe                            0.6.1
-mdit-py-plugins                   0.2.5
-mistune                           0.8.4
-mlperf-compliance                 0.0.10
-mock                              4.0.3
-msgfy                             0.1.0
-multidict                         5.2.0
-murmurhash                        1.0.5
-nbclassic                         0.3.2
-nbclient                          0.5.2
-nbconvert                         6.0.7
-nbformat                          5.1.2
-nest-asyncio                      1.5.1
-networkx                          2.0
-ninja                             1.10.0.post2
-nltk                              3.5
-notebook                          6.2.0
-numba                             0.51.2
-numpy                             1.19.2
-nvidia-dali-cuda110               0.29.0
-nvidia-pyprof                     3.8.0
-oauthlib                          3.1.0
-onnx                              1.8.0
-onnxruntime                       1.6.0
-opencv-python                     4.4.0.46
-opt-einsum                        3.3.0
-packaging                         20.9
-pamela                            1.0.0
-pandas                            1.1.4
-pandocfilters                     1.4.3
-parso                             0.8.1
-pathtools                         0.1.2
-pathvalidate                      2.3.2
-patsy                             0.5.1
-pexpect                           4.8.0
-pgmpy                             0.1.15
-pickleshare                       0.7.5
-Pillow                            8.1.2
-Pillow-SIMD                       7.0.0.post3
-pip                               20.2.4
-pkginfo                           1.7.0
-plac                              1.1.0
-pluggy                            0.13.1
-polygraphy                        0.23.4
-pooch                             1.3.0
-preshed                           3.0.2
-progressbar                       2.5
-prometheus-client                 0.9.0
-promise                           2.3
-prompt-toolkit                    3.0.8
-protobuf                          3.14.0
-psutil                            5.8.0
-ptyprocess                        0.7.0
-py                                1.10.0
-pyasn1                            0.4.8
-pyasn1-modules                    0.2.8
-pybatchclassyfire                 0.1.6
-pybind11                          2.6.2
-pycocotools                       2.0+nv0.4.0
-pycodestyle                       2.5.0
-pycosat                           0.6.3
-pycparser                         2.20
-pycuda                            2020.1
-pydot                             1.4.2
-pyflakes                          2.1.1
-Pygments                          2.7.4
-pynvml                            8.0.4
-pyOpenSSL                         19.1.0
-pyparsing                         2.4.7
-pyrsistent                        0.17.3
-PySocks                           1.7.1
-pytablewriter                     0.47.0
-pyteomics                         4.4.2
-pytest                            6.2.2
-pytest-cov                        2.11.1
-pytest-pythonpath                 0.7.3
-python-dateutil                   2.8.1
-python-editor                     1.0.4
-python-hostlist                   1.21
-python-json-logger                2.0.1
-python-nvd3                       0.15.0
-python-slugify                    4.0.1
-pytools                           2021.1
-pytorch-transformers              1.1.0
-pytz                              2021.1
-PyWavelets                        1.1.1
-PyYAML                            5.4.1
-pyzmq                             22.0.3
-rdkit-pypi                        2021.3.5.1
-regex                             2020.11.13
-requests                          2.24.0
-requests-cache                    0.8.1
-requests-oauthlib                 1.3.0
-requests-unixsocket               0.2.0
-resampy                           0.2.2
-revtok                            0.0.3
-rsa                               4.7.2
-ruamel-yaml                       0.15.87
-s3transfer                        0.3.4
-sacrebleu                         1.2.10
-sacremoses                        0.0.35
-scikit-image                      0.15.0
-scikit-learn                      0.24.1
-scipy                             1.6.0
-seaborn                           0.11.1
-Send2Trash                        1.5.0
-sentencepiece                     0.1.95
-sentry-sdk                        1.0.0
-setuptools                        50.3.1.post20201107
-shortuuid                         1.0.1
-simpervisor                       0.4
-six                               1.15.0
-smart-open                        5.0.0
-smmap                             3.0.5
-sniffio                           1.2.0
-snowballstemmer                   2.1.0
-SoundFile                         0.10.3.post1
-soupsieve                         2.1
-sox                               1.4.1
-spacy                             2.3.5
-spark                             0.2.1
-spec2vec                          0.4.0
-Sphinx                            3.5.1
-sphinx-rtd-theme                  0.5.1
-sphinxcontrib-applehelp           1.0.2
-sphinxcontrib-devhelp             1.0.2
-sphinxcontrib-htmlhelp            1.0.3
-sphinxcontrib-jsmath              1.0.1
-sphinxcontrib-qthelp              1.0.3
-sphinxcontrib-serializinghtml     1.1.4
-SQLAlchemy                        1.4.2
-srsly                             1.0.5
-statsmodels                       0.12.2
-subprocess32                      3.5.4
-subword-nmt                       0.3.3
-tabledata                         1.1.3
-tabulate                          0.8.8
-tensorboard                       2.5.0
-tensorboard-data-server           0.6.0
-tensorboard-plugin-wit            1.8.0
-tensorboardX                      1.8
-tensorflow                        2.4.1
-tensorflow-estimator              2.4.0
-tensorrt                          7.2.2.3
-termcolor                         1.1.0
-terminado                         0.9.2
-testpath                          0.4.4
-text-unidecode                    1.3
-thinc                             7.4.5
-threadpoolctl                     2.1.0
-tokenizers                        0.10.1
-toml                              0.10.2
-torch                             1.8.0a0+52ea372
-torchtext                         0.9.0a0
-torchvision                       0.9.0a0
-tornado                           6.1
-tqdm                              4.53.0
-traitlets                         5.0.5
-transformers                      4.4.2
-typepy                            1.1.4
-typing-extensions                 3.10.0.2
-uff                               0.6.9
-Unidecode                         1.2.0
-url-normalize                     1.4.3
-urllib3                           1.25.11
-wandb                             0.10.22
-wasabi                            0.8.2
-wcwidth                           0.2.5
-webencodings                      0.5.1
-websocket-client                  1.2.1
-Werkzeug                          1.0.1
-wheel                             0.35.1
-widgetsnbextension                3.5.1
-wrapt                             1.12.1
-yacs                              0.1.8
-yarl                              1.7.0
-zipp                              3.4.0
+absl-py==0.11.0
+aiohttp==3.7.4.post0
+alabaster==0.7.12
+alembic==1.5.7
+anyio==3.3.2
+apex==0.1
+appdirs==1.4.4
+argon2-cffi==20.1.0
+ascii-graph==1.5.1
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+attrs==21.2.0
+audioread==2.1.9
+Babel==2.9.0
+backcall==0.2.0
+beautifulsoup4==4.9.3
+bleach==3.3.0
+blis==0.4.1
+bokeh==2.4.0
+boto3==1.17.10
+botocore==1.20.10
+brotlipy==0.7.0
+cachetools==4.2.1
+catalogue==1.0.0
+cattrs==1.8.0
+certifi==2020.12.5
+certipy==0.1.3
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+codecov==2.1.11
+conda==4.9.2
+conda-build==3.21.4
+conda-package-handling==1.7.2
+configparser==5.0.2
+coverage==5.4
+cryptography==3.2.1
+cxxfilt==0.2.2
+cycler==0.10.0
+cymem==2.0.5
+Cython==0.28.4
+DataProperty==0.50.0
+decorator==4.4.2
+deepspeed==0.3.13
+defusedxml==0.6.0
+Deprecated==1.2.12
+DLLogger==0.1.0
+docker-pycreds==0.4.0
+docutils==0.16
+entrypoints==0.3
+fastai==2.1.10
+fastcore==1.3.19
+fastprogress==1.0.0
+filelock==3.0.12
+findspark==1.4.2
+flake8==3.7.9
+Flask==1.1.2
+flatbuffers==1.12
+future==0.18.2
+gast==0.3.3
+gensim==3.8.0
+gitdb==4.0.5
+GitPython==3.1.14
+glob2==0.7
+google-auth==1.28.0
+google-auth-oauthlib==0.4.3
+google-pasta==0.2.0
+graphsurgeon==0.4.5
+greenlet==1.0.0
+grpcio==1.32.0
+h5py==2.10.0
+html2text==2020.1.16
+hypothesis==4.50.8
+idna==2.10
+imageio==2.9.0
+imagesize==1.2.0
+importlib-metadata==2.0.0
+inflect==5.0.2
+iniconfig==1.1.1
+ipdb==0.13.4
+ipyexperiments==0.1.24
+ipykernel==5.4.3
+ipython==7.20.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.4
+itsdangerous==1.1.0
+jedi==0.17.0
+Jinja2==2.11.3
+jmespath==0.10.0
+joblib==1.0.1
+json5==0.9.5
+jsonschema==3.0.2
+jupyter-client==6.1.7
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.3
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyter-server==1.11.1
+jupyter-server-proxy==3.1.0
+jupyter-telemetry==0.1.0
+jupyter-tensorboard==0.2.0
+jupyterhub==1.3.0
+jupyterlab==3.2.0rc0
+jupyterlab-nvdashboard==0.6.0
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.8.2
+jupyterlab-widgets==1.0.0
+jupytext==1.6.0
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+libarchive-c==2.9
+librosa==0.8.0
+line-profiler==3.2.6
+llvmlite==0.34.0
+lmdb==1.1.1
+lxml==4.6.3
+Mako==1.1.4
+Markdown==3.3.3
+markdown-it-py==0.5.8
+MarkupSafe==1.1.1
+maskrcnn-benchmark==0.1
+matchms==0.9.2
+matplotlib==3.3.4
+mbstrdecoder==1.0.1
+mccabe==0.6.1
+mdit-py-plugins==0.2.5
+mistune==0.8.4
+mlperf-compliance==0.0.10
+mock==4.0.3
+msgfy==0.1.0
+multidict==5.2.0
+murmurhash==1.0.5
+nbclassic==0.3.2
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+networkx==2.0
+ninja==1.10.0.post2
+nltk==3.5
+notebook==6.2.0
+numba==0.51.2
+numpy==1.19.2
+nvidia-dali-cuda110==0.29.0
+nvidia-pyprof==3.8.0
+oauthlib==3.1.0
+onnx==1.8.0
+onnxruntime==1.6.0
+opencv-python==4.4.0.46
+opt-einsum==3.3.0
+packaging==20.9
+pamela==1.0.0
+pandas==1.1.4
+pandocfilters==1.4.3
+parso==0.8.1
+pathtools==0.1.2
+pathvalidate==2.3.2
+patsy==0.5.1
+pexpect==4.8.0
+pgmpy==0.1.15
+pickleshare==0.7.5
+Pillow==8.1.2
+Pillow-SIMD==7.0.0.post3
+pip==20.2.4
+pkginfo==1.7.0
+plac==1.1.0
+pluggy==0.13.1
+polygraphy==0.23.4
+pooch==1.3.0
+preshed==3.0.2
+progressbar==2.5
+prometheus-client==0.9.0
+promise==2.3
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+psutil==5.8.0
+ptyprocess==0.7.0
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybatchclassyfire==0.1.6
+pybind11==2.6.2
+pycocotools==2.0+nv0.4.0
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.20
+pycuda==2020.1
+pydot==1.4.2
+pyflakes==2.1.1
+Pygments==2.7.4
+pynvml==8.0.4
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+PySocks==1.7.1
+pytablewriter==0.47.0
+pyteomics==4.4.2
+pytest==6.2.2
+pytest-cov==2.11.1
+pytest-pythonpath==0.7.3
+python-dateutil==2.8.1
+python-editor==1.0.4
+python-hostlist==1.21
+python-json-logger==2.0.1
+python-nvd3==0.15.0
+python-slugify==4.0.1
+pytools==2021.1
+pytorch-transformers==1.1.0
+pytz==2021.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+rdkit-pypi==2021.3.5.1
+regex==2020.11.13
+requests==2.24.0
+requests-cache==0.8.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+resampy==0.2.2
+revtok==0.0.3
+rsa==4.7.2
+ruamel-yaml==0.15.87
+s3transfer==0.3.4
+sacrebleu==1.2.10
+sacremoses==0.0.35
+scikit-image==0.15.0
+scikit-learn==0.24.1
+scipy==1.6.0
+seaborn==0.11.1
+Send2Trash==1.5.0
+sentencepiece==0.1.95
+sentry-sdk==1.0.0
+setuptools==50.3.1.post20201107
+shortuuid==1.0.1
+simpervisor==0.4
+six==1.15.0
+smart-open==5.0.0
+smmap==3.0.5
+sniffio==1.2.0
+snowballstemmer==2.1.0
+SoundFile==0.10.3.post1
+soupsieve==2.1
+sox==1.4.1
+spacy==2.3.5
+spark==0.2.1
+spec2vec==0.4.0
+Sphinx==3.5.1
+sphinx-rtd-theme==0.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+SQLAlchemy==1.4.2
+srsly==1.0.5
+statsmodels==0.12.2
+subprocess32==3.5.4
+subword-nmt==0.3.3
+tabledata==1.1.3
+tabulate==0.8.8
+tensorboard==2.5.0
+tensorboard-data-server==0.6.0
+tensorboard-plugin-wit==1.8.0
+tensorboardX==1.8
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+tensorrt==7.2.2.3
+termcolor==1.1.0
+terminado==0.9.2
+testpath==0.4.4
+text-unidecode==1.3
+thinc==7.4.5
+threadpoolctl==2.1.0
+tokenizers==0.10.1
+toml==0.10.2
+torch==1.8.0a0+52ea372
+torchtext==0.9.0a0
+torchvision==0.9.0a0
+tornado==6.1
+tqdm==4.53.0
+traitlets==5.0.5
+transformers==4.4.2
+typepy==1.1.4
+typing-extensions==3.10.0.2
+uff==0.6.9
+Unidecode==1.2.0
+url-normalize==1.4.3
+urllib3==1.25.11
+wandb==0.10.22
+wasabi==0.8.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.1
+Werkzeug==1.0.1
+wheel==0.35.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+yacs==0.1.8
+yarl==1.7.0
+zipp==3.4.0
